--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="maplibre-gl-compare.js"/> -->
     <title>UK PHI</title>
   </head>
   <body>
